--- a/Numpy/Digvi_NumPy_end_to_end_for_ML.ipynb
+++ b/Numpy/Digvi_NumPy_end_to_end_for_ML.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3194679f",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1f988523",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numpy Version is: 1.24.3\n"
+      "Numpy Version is: 1.26.4\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "f30665e2",
    "metadata": {},
    "outputs": [
@@ -139,6 +139,27 @@
     "# lets check the dimentions of the array\n",
     "\n",
     "print('Number of dimensions:',arr.ndim)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "64fd0e07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[1]"
    ]
   },
   {
@@ -881,7 +902,7 @@
    "id": "b35be383",
    "metadata": {},
    "source": [
-    "###### Negative Indices\n",
+    "#### Negative Indices\n",
     "\n",
     "    Negative indices always start from last element of n-d \n",
     "    array i.e. -1st index is last element of ndarray."
@@ -1484,6 +1505,173 @@
    ],
    "source": [
     "a[::-1,::-1,::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ad3c13c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1,  2,  3],\n",
+       "        [ 5,  6,  7]],\n",
+       "\n",
+       "       [[11, 22, 33],\n",
+       "        [55, 66, 77]]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr=np.array([[[1,2,3],\n",
+    "               [5,6,7]],\n",
+    "              \n",
+    "              [[11,22,33],\n",
+    "               [55,66,77]]])\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "db835f17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1, 77])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[[0,1], [0,1], [0,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "84cb0b0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 2],\n",
+       "        [ 6]],\n",
+       "\n",
+       "       [[22],\n",
+       "        [66]]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[0:, 0:, 1:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d23cc0fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1, 33, 77])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[[0,1,1], [0,0,1], [0,2,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2eebfe2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  5, 22, 66,  3,  7])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[[0,0,1,1,0,0], [0,1,0,1,0,1], [0,0,1,1,2,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4d34979a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3],\n",
+       "       [ 5,  6,  7],\n",
+       "       [11, 22, 33],\n",
+       "       [55, 66, 77]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr=np.array([[1,2,3],\n",
+    "               [5,6,7],\n",
+    "              [11,22,33],\n",
+    "               [55,66,77]])\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ec7576d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  5, 22, 66,  3,  7])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[[0,1,2,3,0,1],[0,0,1,1,2,2]]"
    ]
   },
   {
@@ -2595,7 +2783,7 @@
    "id": "492d8861",
    "metadata": {},
    "source": [
-    "###### 1. Using nditer()"
+    "### 1. Using nditer()"
    ]
   },
   {
@@ -2893,7 +3081,7 @@
    "id": "a69ca5a2",
    "metadata": {},
    "source": [
-    "###### 2. Using ndenumerate()\n",
+    "### 2. Using ndenumerate()\n",
     "\n",
     "    Enumeration means mentioning sequence number of somethings one by one\n",
     "    \n",
@@ -3026,7 +3214,7 @@
    "id": "e7ed744e",
    "metadata": {},
    "source": [
-    "###### 1. using concatenation \n",
+    "### 1. using concatenation \n",
     "\n",
     "        Combining two or more arrays along an existing axis. The resulting array has the same dimension as the original arrays.\n",
     "        The dimension along which concatenation occurs remains the same. If you concatenate two 1D arrays, you get a longer 1D array. If you concatenate two 2D arrays along rows or columns, you get a larger 2D array."
@@ -3034,7 +3222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 14,
    "id": "389abb24",
    "metadata": {},
    "outputs": [
@@ -3056,7 +3244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 15,
    "id": "0d42a231",
    "metadata": {},
    "outputs": [
@@ -3064,6 +3252,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "arr1 : [[1 2]\n",
+      " [3 4]]\n",
+      "arr2 : [[5 6]\n",
+      " [7 8]]\n",
       "[[1 2 5 6]\n",
       " [3 4 7 8]]\n",
       "****************************************************************************************************\n",
@@ -3081,8 +3273,10 @@
     "# axis = 1 : it represents columns\n",
     "\n",
     "arr1 = np.array([[1, 2], [3, 4]])\n",
+    "print('arr1 :',arr1)\n",
     "\n",
     "arr2 = np.array([[5,6 ], [7, 8]])\n",
+    "print('arr2 :',arr2)\n",
     "\n",
     "arr = np.concatenate((arr1, arr2), axis=1) # columnwise\n",
     "print(arr)\n",
@@ -3098,7 +3292,7 @@
    "id": "db8634a9",
    "metadata": {},
    "source": [
-    "###### 2. using Stack Functions\n",
+    "### 2. using Stack Functions\n",
     "\n",
     "         Stacking is same as concatenation, the only difference is that stacking is done along new axis.\n",
     "         Joining two or more arrays along a new axis, thereby increasing the dimensionality of the arrays.\n",
@@ -3311,7 +3505,7 @@
    "id": "5578908c",
    "metadata": {},
    "source": [
-    "> ###### 1. using split()"
+    "> ### 1. using split()"
    ]
   },
   {
@@ -3458,7 +3652,7 @@
    "id": "3f827bb8",
    "metadata": {},
    "source": [
-    "> ###### 2. array_split()\n",
+    "> ### 2. array_split()\n",
     "\n",
     "    If no of elements are less than it adjust in last array \n",
     "    \n",
@@ -3827,12 +4021,12 @@
    "id": "4414e917",
    "metadata": {},
    "source": [
-    "###### 1. where()"
+    "### 1. where()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "id": "657ac6ff",
    "metadata": {},
    "outputs": [
@@ -3853,6 +4047,27 @@
     "\n",
     "print(arr)\n",
     "print('Location of index:',x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "50e144f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['--', '--', '--', 'equal', '--', 'equal', 'equal'], dtype='<U5')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(arr == 4, 'equal', '--')"
    ]
   },
   {
@@ -3948,7 +4163,7 @@
    "id": "f35d53cc",
    "metadata": {},
    "source": [
-    "###### 2. searchsorted()\n",
+    "### 2. searchsorted()\n",
     "\n",
     "    perform a binary search in the array and returns the index where the specified value would be inserted to maintain the search order\n",
     "    \n",
@@ -4335,8 +4550,7 @@
     "        \n",
     "print(index)\n",
     "newarr=arr[index]\n",
-    "print(newarr)\n",
-    "    "
+    "print(newarr)   "
    ]
   },
   {
@@ -4546,7 +4760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "40d57b60",
    "metadata": {},
    "outputs": [
@@ -4880,7 +5094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "afa23ec8",
    "metadata": {},
    "outputs": [
@@ -4902,7 +5116,7 @@
        "       17, 18, 19, 20, 21, 22, 23, 24])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4926,7 +5140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "e21c51dc",
    "metadata": {},
    "outputs": [
@@ -4937,7 +5151,7 @@
        "       17, 18, 19, 20, 21, 22, 23, 24])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5341,7 +5555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
