--- a/Python3_for_data_engineer_by_Prashant_kumar_pandey/practice-exercise-03.ipynb
+++ b/Python3_for_data_engineer_by_Prashant_kumar_pandey/practice-exercise-03.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Practice Exercise - 03 - Solution"
+    "# Practice Exercise - 03"
    ]
   },
   {
@@ -24,24 +24,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Java', ' Python', ' C++', ' Scala', ' C']"
+       "['Java, Python, C++, Scala, C']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "languages = \"Java, Python, C++, Scala, C\"\n",
-    "\n",
-    "languages.split(',')"
+    "[languages]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['Java, Python, C++, Scala, C'], list)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newlist=[languages]\n",
+    "newlist, type(newlist)"
    ]
   },
   {
@@ -61,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -74,9 +94,7 @@
    ],
    "source": [
     "num_list = [5, 6, 8, 7, 9]\n",
-    "\n",
-    "num_list.insert(3, 10)\n",
-    "\n",
+    "num_list.insert(3,10)\n",
     "print(num_list)"
    ]
   },
@@ -87,6 +105,7 @@
     "### Question 3:\n",
     "\n",
     "Print all the multiples of 3 between 5 and 25.\n",
+    "i.e You need to find and display all numbers between 5 and 25 that are divisible by 3.\n",
     "\n",
     "#### Expected Output:\n",
     "\n",
@@ -101,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -119,9 +138,11 @@
     }
    ],
    "source": [
-    "for i in range(5, 25):\n",
-    "    if i % 3 == 0:\n",
-    "        print(i)"
+    "for num in range(5,25):\n",
+    "    if num%3 == 0:\n",
+    "        print(num)\n",
+    "    else:\n",
+    "        pass"
    ]
   },
   {
@@ -141,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -154,10 +175,8 @@
    ],
    "source": [
     "num = [2, 4, 6, 8]\n",
-    "\n",
-    "square = [i**2 for i in num]\n",
-    "\n",
-    "print(square)"
+    "square_num_list = [i*i for i in num]\n",
+    "print(square_num_list)"
    ]
   },
   {
@@ -184,7 +203,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,11):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -206,10 +252,9 @@
    ],
    "source": [
     "num = 1\n",
-    "\n",
-    "while num <= 10:\n",
+    "while num <=10:\n",
     "    print(num)\n",
-    "    num += 1"
+    "    num+=1"
    ]
   },
   {
@@ -229,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -242,11 +287,35 @@
    ],
    "source": [
     "num_tuple = (5, 8, 13, 2, 17, 1)\n",
-    "\n",
-    "sorted_num = sorted(num_tuple)\n",
-    "sorted_num.pop()\n",
-    "\n",
-    "print(sorted_num)"
+    "#  coverting tuple to list\n",
+    "sorted_list = list(num_tuple)\n",
+    "# removing the maximum number from list\n",
+    "sorted_list.remove(max(sorted_list))\n",
+    "# sorting list in ascending order\n",
+    "sorted_list.sort()\n",
+    "print(sorted_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 5, 8, 13]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorttup = sorted(num_tuple)\n",
+    "sorttup.pop()\n",
+    "sorttup"
    ]
   },
   {
@@ -266,26 +335,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'Lenovo, Dell, Acer, Asus, HP'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "myList = ['Lenovo', ' Dell', ' Acer', ' Asus', ' HP']\n",
-    "\n",
-    "myString = ','.join(myList)\n",
-    "\n",
-    "myString"
+    "result = ','.join(myList)\n",
+    "print(type(result))\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['Lenovo,', 'Dell,', 'Acer,', 'Asus,', 'HP'], list)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.split(), type(result.split())"
    ]
   },
   {
@@ -307,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +418,30 @@
     }
    ],
    "source": [
-    "for i in range(-10, 0, 2):\n",
+    "for i in range(-10,0):\n",
+    "    if i%2==0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-10\n",
+      "-8\n",
+      "-6\n",
+      "-4\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(-10,0,2):\n",
     "    print(i)"
    ]
   },
@@ -344,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -357,14 +475,38 @@
    ],
    "source": [
     "n = 5623\n",
-    "rev = 0\n",
+    "rn = 0\n",
     "\n",
-    "while n > 0:\n",
-    "    rem = n % 10\n",
-    "    rev = (rev * 10) + rem\n",
-    "    n = n // 10\n",
+    "while n!=0:\n",
+    "    lastdigit = n % 10 # taken last digit\n",
+    "    rn = rn * 10 + lastdigit # add latdigit with result\n",
+    "    n = n//10 # remove the last digit from original\n",
     "    \n",
-    "print(rev)"
+    "print(rn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123456789\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 987654321\n",
+    "result = 0\n",
+    "\n",
+    "while n >0:\n",
+    "    last_digit = n % 10 \n",
+    "    result = result * 10 + last_digit\n",
+    "    n = n//10\n",
+    "print(result)"
    ]
   },
   {
@@ -384,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -397,11 +539,54 @@
    ],
    "source": [
     "num = [2, 4, 6, 8]\n",
-    "\n",
-    "result = [(x, x**2, x**3) for x in num]\n",
-    "\n",
+    "result = [(a,a**2,a**3) for a in num]\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, 2, 4, 8, 4, 8), (4, 4, 16, 64, 16, 64), (6, 6, 36, 216, 36, 216), (8, 8, 64, 512, 64, 512)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = [(2,2), (4,4), (6,6), (8,8)]\n",
+    "result = [(a,b,a**2,a**3,b**2,b**3) for (a,b) in num]\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, 2, 4, 4), (4, 4, 16, 256), (6, 6, 36, 46656), (8, 8, 64, 16777216)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = [(2,2), (4,4), (6,6), (8,8)]\n",
+    "result = [(a,b, a*b, a**b) for (a,b) in num]\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
