--- a/Python3_for_data_engineer_by_Prashant_kumar_pandey/coding-challange-01.ipynb
+++ b/Python3_for_data_engineer_by_Prashant_kumar_pandey/coding-challange-01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Coding Challange - 01 - Solution"
+    "# Coding Challange - 01"
    ]
   },
   {
@@ -37,7 +37,6 @@
    ],
    "source": [
     "tuple_1 = (22, 65, 12, 54)\n",
-    "\n",
     "print(tuple_1[::-1])"
    ]
   },
@@ -58,7 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myList = [(2, 14, 'David'), [2, 7], 'Shaun']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -67,14 +75,12 @@
        "'David'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myList = [(2, 14, 'David'), [2, 7], 'Shaun']\n",
-    "\n",
     "myList[0][2]"
    ]
   },
@@ -97,22 +103,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 4, 6, 'A', 'B', 'C'}"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mySet = {2, 4, 6}\n",
+    "myDict = {'A':'John', 'B':'Emma', 'C':'Sam'}\n",
+    "mySet.union(myDict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{2, 4, 6, 'B', 'C', 'A'}\n"
+      "{2, 4, 'A', 6, 'B', 'C'}\n"
      ]
     }
    ],
    "source": [
     "mySet = {2, 4, 6}\n",
     "myDict = {'A':'John', 'B':'Emma', 'C':'Sam'}\n",
-    "\n",
-    "mySet.update(myDict.keys())\n",
+    "mySet.update(myDict)\n",
     "print(mySet)"
    ]
   },
@@ -133,22 +160,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_1 = {2, 4, 6, 8}\n",
+    "set_2 = {6, 8, 10, 12}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{2, 4, 6, 8, 10, 12}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{2, 4, 6, 8, 10, 12}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "set_1 = {2, 4, 6, 8}\n",
-    "set_2 = {6, 8, 10, 12}\n",
-    "\n",
-    "print(set_1.union(set_2))"
+    "set_1.union(set_2)"
    ]
   },
   {
@@ -166,23 +203,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First Second:  00:00:00\n",
-      "Last Second:  23:59:59.999999\n"
+      "First Second: 00:00:00\n",
+      "Last Second: 23:59:59.999999\n"
      ]
     }
    ],
    "source": [
     "import datetime\n",
     "\n",
-    "print(\"First Second: \", datetime.time.min)\n",
-    "print(\"Last Second: \", datetime.time.max)"
+    "print(\"First Second:\",datetime.time.min)\n",
+    "print(\"Last Second:\",datetime.time.max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Second: 0:00:00\n",
+      "Last Second: 23:59:59.999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import timedelta\n",
+    "print(\"First Second:\",timedelta(seconds=0))\n",
+    "print(\"Last Second:\",timedelta(seconds=59, microseconds=999999, milliseconds=0, hours=23, minutes=59))"
    ]
   },
   {
@@ -202,26 +259,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total digits are:  4\n"
+      "Total Digits are: 4\n",
+      "4\n"
      ]
     }
    ],
    "source": [
     "num = 8842\n",
-    "\n",
+    "numString = str(num)\n",
     "count = 0\n",
-    "while num != 0:\n",
-    "    num //= 10\n",
-    "    count += 1\n",
+    "for i in numString:\n",
+    "    count+=1\n",
+    "print(\"Total Digits are:\",count)\n",
     "\n",
-    "print(\"Total digits are: \", count)"
+    "print(len(numString))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 8842\n",
+    "count = 0\n",
+    "while num!=0:\n",
+    "    num = num//10 # last digit\n",
+    "    count+=1\n",
+    "print(count)"
    ]
   },
   {
@@ -242,31 +322,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The list with maximum sum of elements:  [19, 13, 7]\n",
-      "The list with minimum sum of elements:  [2, 8, 11]\n"
+      "The List with the maximum sum of elements: [19, 13, 7]\n",
+      "The List with the minimum sum of elements: [2, 8, 11]\n"
      ]
     }
    ],
    "source": [
     "num_list = [[2, 8, 11], [4, 5, 7, 12], [8, 9, 10, 11], [19, 13, 7], [2, 5, 16]]\n",
     "\n",
-    "print(\"The list with maximum sum of elements: \", max(num_list, key = sum))\n",
-    "print(\"The list with minimum sum of elements: \", min(num_list, key = sum))   "
+    "print(\"The List with the maximum sum of elements:\",max(num_list, key=sum))\n",
+    "print(\"The List with the minimum sum of elements:\",min(num_list, key=sum))"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 129,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The List with the maximum sum of elements: [19, 13, 7]\n",
+      "The List with the minimum sum of elements: [2, 8, 11]\n"
+     ]
+    }
+   ],
    "source": [
-    "#### Explanation: \n",
-    "Some functions such as max(), min() can take a python lambda, which is applied to each element before the max(), or min() operation. This is further explained in the upcoming lecture on Python Lambda."
+    "num_list = [[2, 8, 11], [4, 5, 7, 12], [8, 9, 10, 11], [19, 13, 7], [2, 5, 16]]\n",
+    "\n",
+    "print(\"The List with the maximum sum of elements:\",max(num_list, key=lambda x: sum(x)))\n",
+    "print(\"The List with the minimum sum of elements:\",min(num_list, key=lambda x: sum(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum of elements :  [21, 28, 38, 39, 23]\n",
+      "The list with the maximum sum of elements: [19, 13, 7]\n",
+      "The list with the minimum sum of elements: [2, 8, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_list = [[2, 8, 11], [4, 5, 7, 12], [8, 9, 10, 11], [19, 13, 7], [2, 5, 16]]\n",
+    "added_ele_sum = []\n",
+    "\n",
+    "for i in num_list:\n",
+    "    add = sum(i)\n",
+    "    added_ele_sum.append(add)\n",
+    "      \n",
+    "print(\"sum of elements : \",added_ele_sum)\n",
+    "   \n",
+    "print(\"The list with the maximum sum of elements:\",num_list[added_ele_sum.index(max(added_ele_sum))])\n",
+    "print(\"The list with the minimum sum of elements:\",num_list[added_ele_sum.index(min(added_ele_sum))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 8, 11], [4, 5, 7, 12], [8, 9, 10, 11], [19, 13, 7], [2, 5, 16]]\n",
+      "[21, 28, 38, 39, 23]\n",
+      "The list with the minimum sum of elements: [2, 8, 11]\n",
+      "The list with the maximum sum of elements: [19, 13, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num_list)\n",
+    "new_list = [(sum(i)) for i in num_list]\n",
+    "print(new_list)\n",
+    "\n",
+    "for x,y in zip(new_list, num_list):\n",
+    "    if x== max(new_list):\n",
+    "        print(\"The list with the maximum sum of elements:\",y)\n",
+    "    if x== min(new_list):\n",
+    "        print(\"The list with the minimum sum of elements:\",y)"
    ]
   },
   {
@@ -294,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -315,11 +465,9 @@
    ],
    "source": [
     "fruits_string = \" Apple, Banana, Mango, Kiwi, Guava, Grapes, Pomegranate, Orange, Watermelon\"\n",
-    "\n",
-    "substring = fruits_string.split(',')\n",
-    "\n",
-    "for fruits in substring:\n",
-    "    print(fruits)"
+    "# fruits_string = fruits_string.replace(',',' ')\n",
+    "for i in fruits_string.split(','):\n",
+    "    print(i)"
    ]
   },
   {
@@ -339,20 +487,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "egaugnal gnimmargorp esoprup-lareneg dna level-hgih a si nohtyP\n",
       "language programming general-purpose and high-level a is Python\n"
      ]
     }
    ],
    "source": [
     "sample_text = \"Python is a high-level and general-purpose programming language\"\n",
-    "\n",
+    "print(sample_text[::-1])\n",
     "print(' '.join(sample_text.split()[::-1]))"
    ]
   },
@@ -373,24 +522,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top Three Heights:  [183, 177, 176]\n"
+      "[160, 162, 163, 168, 170, 171, 175, 176, 177, 183]\n",
+      "Top Three Heights: [183, 177, 176]\n"
      ]
     }
    ],
    "source": [
     "heights = [177, 160, 171, 163, 168, 175, 176, 183, 162, 170]\n",
-    "\n",
-    "top_three = sorted(heights)\n",
-    "\n",
-    "print('Top Three Heights: ', top_three[:-4:-1])"
+    "heights.sort() # bydefault reverse=False\n",
+    "print(heights)\n",
+    "print(\"Top Three Heights:\",heights[-3:][::-1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[183, 177, 176, 175, 171, 170, 168, 163, 162, 160]\n",
+      "Top Three Heights: [183, 177, 176]\n"
+     ]
+    }
+   ],
+   "source": [
+    "heights = [177, 160, 171, 163, 168, 175, 176, 183, 162, 170]\n",
+    "heights.sort(reverse=True)\n",
+    "print(heights)\n",
+    "print(\"Top Three Heights:\",heights[0:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top three: [183, 177, 176]\n"
+     ]
+    }
+   ],
+   "source": [
+    "heights = [177, 160, 171, 163, 168, 175, 176, 183, 162, 170]\n",
+    "top3 = sorted(heights)\n",
+    "print(\"Top three:\",top3[-1:-4:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
