--- a/Python3_for_data_engineer_by_Prashant_kumar_pandey/coding-challange-02.ipynb
+++ b/Python3_for_data_engineer_by_Prashant_kumar_pandey/coding-challange-02.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Coding Challange - 02 - Solution"
+    "# Coding Challange - 02"
    ]
   },
   {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -40,15 +40,34 @@
     "list_1 = [5, 10, 15, 20, 25, 30, 35]\n",
     "list_2 = [7, 14, 21, 28, 35, 42, 49]\n",
     "\n",
-    "list_3 = []\n",
-    "\n",
-    "odd_index = list_1[1::2]\n",
-    "even_index = list_2[0::2]\n",
-    "\n",
-    "list_3.extend(odd_index)\n",
-    "list_3.extend(even_index)\n",
+    "list_3 = [] \n",
+    "       \n",
+    "even_index  =  list_3.extend(list_1[1::2])   \n",
+    "odd_index = list_3.extend(list_2[::2])\n",
     "\n",
     "print(list_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 7, 21, 35, 49]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1 = [5, 10, 15, 20, 25, 30, 35]\n",
+    "list_2 = [7, 14, 21, 28, 35, 42, 49]\n",
+    "\n",
+    "list_3 = list_1[1::2] + list_2[::2]\n",
+    "       \n",
+    "print(list_3)        "
    ]
   },
   {
@@ -91,7 +110,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'m', 'x'}\n",
+      "{('m', 12)}\n",
+      "{'s', 'o', 'r', 'n', 'a', 'q'}\n",
+      "{'s', 'o', 'a'}\n",
+      "{'s': 7, 'o': 8, 'a': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_1 = {'a' : 5, 's' : 7, 'x' : 11, 'm' : 12, 'o' : 8}\n",
+    "num_2 = {'r' : 12, 'x' : 9, 'n' : 8, 'm' : 12, 'q' : 10}\n",
+    "\n",
+    "# 1. Print out the letters which are common to both these dictionaries.\n",
+    "print(num_1.keys() & num_2.keys())\n",
+    "\n",
+    "# 2. Print out the (key, value) pair, which is common to both these dictionaries.\n",
+    "print(num_1.items() & num_2.items())\n",
+    "\n",
+    "# 3. Print out all the letters which have occurred only once in these dictionaries.\n",
+    "print(num_1.keys() ^ num_2.keys())\n",
+    "\n",
+    "# 4. Print out the letters in num_1 that are not present in num_2.\n",
+    "print(num_1.keys() - num_2.keys())\n",
+    "\n",
+    "# 5. Print out a new dictionary num_3, which contains unique letters of num_1 from the previous output with their \n",
+    "# associated values.\n",
+    "\n",
+    "num_3 = {i:num_1[i] for i in num_1.keys()  - (num_1.keys() & num_2.keys())}\n",
+    "print(num_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -100,34 +159,41 @@
      "text": [
       "{'x', 'm'}\n",
       "{('m', 12)}\n",
-      "{'o', 'a', 'n', 'q', 'r', 's'}\n",
-      "{'o', 'a', 's'}\n",
-      "{'o': 8, 'a': 5, 's': 7}\n"
+      "{'s', 'o', 'r', 'n', 'a', 'q'}\n",
+      "{'s', 'o', 'a'}\n",
+      "{'s': 7, 'o': 8, 'x': 11, 'a': 5}\n"
      ]
     }
    ],
    "source": [
-    "num_1 = {'a' : 5,\n",
-    "        's' : 7,\n",
-    "        'x' : 11,\n",
-    "        'm' : 12,\n",
-    "        'o' : 8}\n",
+    "num_1 = {'a' : 5, 's' : 7, 'x' : 11, 'm' : 12, 'o' : 8}\n",
+    "num_2 = {'r' : 12, 'x' : 9, 'n' : 8, 'm' : 12, 'q' : 10}\n",
     "\n",
-    "num_2 = {'r' : 12,\n",
-    "        'x' : 9,\n",
-    "        'n' : 8,\n",
-    "        'm' : 12,\n",
-    "        'q' : 10}\n",
+    "# 1. Print out the letters which are common to both these dictionaries.\n",
+    "num_1_set = set(num_1)\n",
+    "num_2_set = set(num_2)\n",
+    "print(num_1_set.intersection(num_2_set))\n",
     "\n",
-    "print(num_1.keys() & num_2.keys())\n",
+    "# 2. Print out the (key, value) pair, which is common to both these dictionaries.\n",
+    "num_1_set = set(num_1.items())\n",
+    "num_2_set = set(num_2.items())\n",
+    "print(num_1_set.intersection(num_2_set))\n",
     "\n",
-    "print(num_1.items() & num_2.items())\n",
+    "# 3. Print out all the letters which have occurred only once in these dictionaries.\n",
+    "num_1_set = set(num_1.keys())\n",
+    "num_2_set = set(num_2.keys())\n",
+    "print(num_1_set.difference(num_2_set).union(num_2_set.difference(num_1_set)))\n",
     "\n",
-    "print(num_1.keys() ^ num_2.keys())\n",
+    "# 4. Print out the letters in num_1 that are not present in num_2.\n",
+    "num_1_set = set(num_1.keys())\n",
+    "num_2_set = set(num_2.keys())\n",
+    "print(num_1_set.difference(num_2_set))\n",
     "\n",
-    "print(num_1.keys() - num_2.keys())\n",
-    "\n",
-    "num_3 = {key:num_1[key] for key in num_1.keys() - (num_1.keys() & num_2.keys())}\n",
+    "# 5. Print out a new dictionary num_3, which contains unique letters of num_1 from the previous output with their \n",
+    "# associated values.\n",
+    "num_1_set = set(num_1.items())\n",
+    "num_2_set = set(num_2.items())\n",
+    "num_3 = dict(num_1_set.difference(num_2_set))\n",
     "print(num_3)"
    ]
   },
@@ -149,33 +215,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Letters:  15\n",
-      "Number of Digits:  4\n"
+      "Number of Letters: 15\n",
+      "Number of Digits: 4\n"
      ]
     }
    ],
    "source": [
     "sample_text = \"Learning Journal 2020\"\n",
     "\n",
-    "digits = letters = 0\n",
+    "lettercount=0\n",
+    "digitcount=0\n",
     "\n",
     "for i in sample_text:\n",
-    "    if i.isdigit():\n",
-    "        digits = digits + 1\n",
-    "    elif i.isalpha():\n",
-    "        letters = letters + 1\n",
+    "    if i.isalpha():\n",
+    "        lettercount+=1\n",
+    "    elif i.isdigit():\n",
+    "        digitcount+=1\n",
     "    else:\n",
     "        pass\n",
-    "    \n",
-    "print(\"Number of Letters: \", letters)\n",
-    "print(\"Number of Digits: \", digits)"
+    "        \n",
+    "print(\"Number of Letters:\",lettercount)\n",
+    "print(\"Number of Digits:\",digitcount)"
    ]
   },
   {
@@ -195,7 +262,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [2, 8, [10, 20, [40, 60, [90, 100], 30, 70], 80], 50]\n",
+      "Modified List: [2, 8, [10, 20, [40, 60, [90, 100, 200], 30, 70], 80], 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [2, 8, [10, 20, [40, 60, [90, 100], 30, 70], 80], 50]\n",
+    "print(\"Original list:\",myList)\n",
+    "myList[2][2][2].insert(2,200)\n",
+    "print(\"Modified List:\",myList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +299,27 @@
     "\n",
     "myList[2][2][2].append(200)\n",
     "print(myList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [2, 8, [10, 20, [40, 60, [90, 100], 30, 70], 80], 50]\n",
+      "Modified List: [2, 8, [10, 20, [40, 60, [90, 100], 30, 37, 70], 80], 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [2, 8, [10, 20, [40, 60, [90, 100], 30, 70], 80], 50]\n",
+    "print(\"Original list:\",myList)\n",
+    "myList[2][2].insert(4,37)\n",
+    "print(\"Modified List:\",myList)"
    ]
   },
   {
@@ -231,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -246,12 +355,7 @@
     "set_1 = {2, 8, 19, 13, 24, 55, 48, 93}\n",
     "set_2 = {7, 11, 55, 84, 8, 65, 73, 13}\n",
     "\n",
-    "common_elements = set_1 & set_2\n",
-    "\n",
-    "for item in common_elements:\n",
-    "    set_1.remove(item)\n",
-    "\n",
-    "print(set_1)"
+    "print(set_1.difference(set_2))"
    ]
   },
   {
@@ -281,14 +385,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prime numbers between 20 and 60 are: \n",
       "23\n",
       "29\n",
       "31\n",
@@ -305,16 +408,57 @@
     "start = 20\n",
     "end = 60\n",
     "\n",
-    "print(f\"Prime numbers between {start} and {end} are: \")\n",
-    "\n",
-    "for num in range(start, end + 1):\n",
+    "for num in range(start,end):\n",
+    "    if num<2:\n",
+    "        continue\n",
     "        \n",
-    "        for i in range(2, num):\n",
-    "           \n",
-    "            if (num % i) == 0:                \n",
-    "                break\n",
-    "        else:\n",
-    "            print(num)"
+    "    is_prime=True\n",
+    "    \n",
+    "    for i in range(2,int(num**0.5)+1):\n",
+    "        if num % i ==0:\n",
+    "            is_prime = False\n",
+    "            break\n",
+    "    if is_prime:\n",
+    "        print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_prime(n):\n",
+    "        if n<2:\n",
+    "            return False\n",
+    "        for i in range(2,int(n**0.5)+1):\n",
+    "            if n%i == 0:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "start = 20\n",
+    "end = 60\n",
+    "\n",
+    "for i in range(start,end):\n",
+    "    if is_prime(i):\n",
+    "        print(i)"
    ]
   },
   {
@@ -334,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -347,9 +491,13 @@
    ],
    "source": [
     "letters_list = ['H', 'R', 'S']\n",
+    "result = []\n",
     "\n",
-    "new_list = [f'{x}{y}' for y in range(1, 4) for x in letters_list]\n",
-    "print(new_list)"
+    "for i in range(1,4):\n",
+    "    for j in letters_list:\n",
+    "        result.append(j+str(i))\n",
+    "        \n",
+    "print(result)"
    ]
   },
   {
@@ -367,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -379,15 +527,11 @@
     }
    ],
    "source": [
-    "multiple_of_3_and_5 = []\n",
-    "\n",
-    "for i in range(1, 101):\n",
-    "    if (i % 5 == 0) & (i % 3 == 0):\n",
-    "        multiple_of_3_and_5.append(i)    \n",
-    "    else:\n",
-    "        continue\n",
-    "\n",
-    "print('Multiples of 3 and 5:', multiple_of_3_and_5)"
+    "result=[]\n",
+    "for i in range(1,101):\n",
+    "    if i%3==0 and i%5==0:\n",
+    "        result.append(i)\n",
+    "print(\"Multiples of 3 and 5:\",result)"
    ]
   },
   {
@@ -412,30 +556,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Cntr f ql dghtrs, ql sns,All, ll lk ndrd, grwn, ngrwn, yng r ld,Strng, mpl, fr, ndrng, cpbl, rch,Prnnl wth th Erth, wth Frdm, Lw nd Lv,A grnd, sn, twrng, std Mthr,Chrd n th dmnt f Tm.'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cntr f ql dghtrs, ql sns,\n",
+      "All, ll lk ndrd, grwn, ngrwn, yng r ld,\n",
+      "Strng, mpl, fr, ndrng, cpbl, rch,\n",
+      "Prnnl wth th Erth, wth Frdm, Lw nd Lv,\n",
+      "A grnd, sn, twrng, std Mthr,\n",
+      "Chrd n th dmnt f Tm.\n"
+     ]
     }
    ],
    "source": [
-    "poem = \"Centre of equal daughters, equal sons,\\\n",
-    "All, all alike endeared, grown, ungrown, young or old,\\\n",
-    "Strong, ample, fair, enduring, capable, rich,\\\n",
-    "Perennial with the Earth, with Freedom, Law and Love,\\\n",
-    "A grand, sane, towering, seated Mother,\\\n",
-    "Chaired in the adamant of Time.\"\n",
+    "poem = \"\"\"Centre of equal daughters, equal sons,\n",
+    "All, all alike endeared, grown, ungrown, young or old,\n",
+    "Strong, ample, fair, enduring, capable, rich,\n",
+    "Perennial with the Earth, with Freedom, Law and Love,\n",
+    "A grand, sane, towering, seated Mother,\n",
+    "Chaired in the adamant of Time.\"\"\"\n",
     "\n",
-    "vowels = ('a', 'e', 'i', 'o', 'u')\n",
-    "''.join([remove_vowels for remove_vowels in poem if remove_vowels not in vowels])"
+    "vowels =  ['a','e','i','o','u']\n",
+    "\n",
+    "result = \"\"\n",
+    "\n",
+    "for char in poem:\n",
+    "    if char in vowels:\n",
+    "        continue\n",
+    "    result+=char\n",
+    "    \n",
+    "print(result)"
    ]
   },
   {
@@ -459,28 +613,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Python count in python_info is: 7\n"
+      "The 'Python' count in python_info is: 7\n"
      ]
     }
    ],
    "source": [
-    "python_info = \"Python is an interpreted, high-level, and general-purpose programming language.\\\n",
-    "Python is dynamically typed and garbage-collected.\\\n",
-    "Python was created in the late 1980s as a successor to the ABC language, Python 2.0.\\\n",
-    "Python 3.0 was released in 2008.\\\n",
-    "A non-profit organization, the Python Software Foundation, manages and directs resources for Python development.\"\n",
+    "python_info = \"\"\"Python is an interpreted, high-level, and general-purpose programming language.\n",
+    "Python is dynamically typed and garbage-collected.\n",
+    "Python was created in the late 1980s as a successor to the ABC language, \n",
+    "Python 2.0. Python 3.0 was released in 2008.\n",
+    "A non-profit organization, the Python Software Foundation, \n",
+    "manages and directs resources for Python development.\"\"\"\n",
     "\n",
-    "substring = \"Python\"\n",
-    "tempString = python_info.lower()\n",
-    "count = tempString.count(substring.lower())\n",
-    "print(\"The Python count in python_info is:\", count)"
+    "print(\"The 'Python' count in python_info is:\",python_info.count(\"Python\"))"
    ]
   }
  ],
